# python-web3

./: .env.example  README.md  addresses.py  diva_functions.py  main.py  pyproject.toml  test.py
abis/: diva_abi.py
